[tool.poetry]
name = "seam"
version = "0.13.1"
description = "SDK for the Seam API written in Python."
authors = ["Seam Labs, Inc. <engineering@getseam.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/seamapi/python-next"
repository = "https://github.com/seamapi/python-next"

[tool.poetry.dependencies]
python = "^3.9.0"
dataclasses-json = "^0.6.4"
niquests = "^3.6.4"
svix = "^1.24.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"
rstcheck = "^6.1.2"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [
    "node_modules"
]
